Updated box-shadow,border-radius to layouts, fixed bootstrap collapse css breaking bug, added prelminary article images placeholding code, modified edit profile page and edit drop down menu to include photo

--- a/app/assets/stylesheets/pages/index/style.sass
+++ b/app/assets/stylesheets/pages/index/style.sass
@@ -1,16 +1,17 @@
 @import compass/css3
 .frontpage
-  padding-top: 30px
-  margin-top: -30px
+  padding-top: 35px
+  margin-top: -40px
   background: white
   font-size: 12px
+  +border-radius(5px)
+  +box-shadow(gray 1px 1px 1px)
   div
     text-align: left
   .end
     width: 100%
     height: 50px
     display: block
-    @include background-image(linear-gradient(white, #dddddd))
 
 .nivoSlider
   text-align: center !important
@@ -29,10 +30,10 @@
     text-align: justify
 
 .actilist
-  background: url('actilist.jpg') no-repeat 60px 0px
+  background: url('pages/index/actilist.jpg') no-repeat 60px 0px
 
 .actsmart
-  background: url('actsmart.jpg') no-repeat 60px 0px
+  background: url('pages/index/actsmart.jpg') no-repeat 60px 0px
 
 .gray-bar
   background-color: #DDD
@@ -68,17 +69,17 @@
     font-weight: bold
 
 .know
-  background: url('kyd.jpg') no-repeat 40px 0px
+  background: url('pages/index/kyd.jpg') no-repeat 40px 0px
 
 .harness
-  background: url('hyp.jpg') no-repeat 40px 0px
+  background: url('pages/index/hyp.jpg') no-repeat 40px 0px
 
 .empower
-  background: url('eyb.jpg') no-repeat 40px 0px
+  background: url('pages/index/eyb.jpg') no-repeat 40px 0px
   width: 34%
 
 .partnerlist
-  background: url('partners.jpg') top no-repeat
+  background: url('pages/index/partners.jpg') top no-repeat
   height: 115px
   width: 100%
   margin-bottom: 20px
